--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 tmp*
 referendum/rawdata/*.csv
+referendum/rawdata/scrutini/*.json
 referendum/processing/scrutini*.csv
+referendum/processing/scrutini/*.csv
 referendum/rawdata/*.json
