--- a/.github/workflows/affluenzaReferendum.yml
+++ b/.github/workflows/affluenzaReferendum.yml
@@ -4,7 +4,7 @@ on:
 #  push:
   repository_dispatch:
   schedule:
-    - cron:  '*/15 */1 * * *'
+    - cron:  '55 */1 * * *'
 
 jobs:
   scheduled:
